--- a/views/icecreamdetail.pug
+++ b/views/icecreamdetail.pug
@@ -7,14 +7,14 @@ block content
  - let icecreamcost = toShow.Cost
  div
  div.row
- div(class='icecreamAttr mr-3') icecream ID is:
+ div(class='icecreamAttr mr-3') Icecream ID is:
  div #{icecreamid}
  div.row
- div(class='icecreamAttr mr-3') icecream flavour is:
+ div(class='icecreamAttr mr-3') Icecream flavour is:
  div #{icecream_flavour}
  div.row
- div(class='icecreamAttr mr-3') icecream cost is:
+ div(class='icecreamAttr mr-3') Icecream cost is:
  div #{icecreamcost}
  div.row
- div(class='icecreamAttr mr-3') icecream quantity is:
+ div(class='icecreamAttr mr-3') Icecream quantity is:
  div #{icecreamquantity}
