--- a/views/icecream.pug
+++ b/views/icecream.pug
@@ -1,22 +1,37 @@
 extends layout
 
 block content
-  h1= title
-  br
-  - var results = [{flavour: "vanilla",Cost: 7.8,quantity: 2},{flavour: "strawberry",Cost: 10.0,quantity: 1},{flavour: "chocolate",Cost: 8.9,quantity: 3}];
-   div(class = "container-fluid")
-    div(class = "row")
-     each i,index in results
-        div(class="col-sm-4" onclick=`buy(${index})`) flavour: #{i.flavour} 
-        br
-        br 
-        div(class="col-sm-4" onclick=`buy(${index})`) Cost: #{i.Cost}
-        br
-        br  
-        div(class="col-sm-4" onclick=`buy(${index})`) quantity #{i.quantity}
-        script.
-                function buy(itemNo){
-                    alert(`You purchased item ${itemNo+1}`)
+  div(class="row m-2")
+  h1(class="col-sm-10")= title
+  a(href = "icecream/create" class="btn bg-dark text-white col-sm-2") Create
+  |  
 
-                }
+  - const icecream = ['flavour','quantity','Cost']
+  //- let items = [] 
+  - let items = results; 
+  - let o;
+  script.
+    function buy(x){
+      alert('Purchased Item: ' + x)
+   } 
+
+  div(class='container-fluid')
+    div(class="d-flex justify-content-end")
+
+    div(class="p-3 mb-2 bg-dark text-white row")
+      each item in icecream 
+        div(class="col-sm-2") #{item} :
+
+    
+    each o, index in items
+      div(class="card text-dark bg-success mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') #{o}
+        
+          div(class='col-sm-2') #{o.icecream_type}
+          div(class='col-sm-2') #{o.duration}
+          div(class='col-sm-2') $ #{o.cost}
+          div(class='col-sm-6')
+            //- div(class='col-sm-3' onclick='buy('+index+')') #{o} 
+            a(href = "icecream/detail/?id=" + o._id)    detail --
+            a(href = "icecream/update/?id=" + o._id)    update --
+            a(href = "icecream/delete/?id=" + o._id)    delete      
 
