Added bonus changes

--- a/views/icecreamdetail.pug
+++ b/views/icecreamdetail.pug
@@ -4,7 +4,7 @@ block content
   h1= title
 
   if (toShow == null) 
-    h2 No instance to Update     
+    h2 No instance to detail     
   else
     - let icecreamid = toShow._id
     - let icecream_flavour = toShow.flavour
