--- a/views/icecream.pug
+++ b/views/icecream.pug
@@ -9,11 +9,23 @@ block content
   - const icecream = ['flavour','quantity','Cost']
   //- let items = [] 
   - let items = results; 
+   div(class="container-fluid")
+    div(class="row m-1")
+     each item in items
+      - let destination = `dispatch(\"/icecream/update?id=${item._id}\")`
+      div(class="row-sm-2", class="m-1") Item #{item.flavour}(#{item.quantity}) is #{item.Cost}
+       br
+       button.btn( class="btn-primary ml-1", onclick= destination) Update
   - let o;
   script.
     function buy(x){
       alert('Purchased Item: ' + x)
    } 
+
+  script.
+    function dispatch(path){
+      window.location.href=path
+    }
 
   div(class='container-fluid')
     div(class="d-flex justify-content-end")
@@ -26,9 +38,9 @@ block content
     each o, index in items
       div(class="card text-dark bg-success mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') #{o}
         
-          div(class='col-sm-2') #{o.icecream_type}
-          div(class='col-sm-2') #{o.duration}
-          div(class='col-sm-2') $ #{o.cost}
+          div(class='col-sm-2') #{o.flavour}
+          div(class='col-sm-2') #{o.quantity}
+          div(class='col-sm-2') $ #{o.Cost}
           div(class='col-sm-6')
             //- div(class='col-sm-3' onclick='buy('+index+')') #{o} 
             a(href = "icecream/detail/?id=" + o._id)    detail --
