--- a/views/icecream.pug
+++ b/views/icecream.pug
@@ -12,10 +12,14 @@ block content
    div(class="container-fluid")
     div(class="row m-1")
      each item in items
-      - let destination = `dispatch(\"/icecream/update?id=${item._id}\")`
+      - let destination1 = `dispatch(\"/icecream/update?id=${item._id}\")`
+      - let destination2 = `dispatch(\"/icecream/delete?id=${item._id}\")`
+      - let destination3 = `dispatch(\"/icecream/detail?id=${item._id}\")`
       div(class="row-sm-2", class="m-1") Item #{item.flavour}(#{item.quantity}) is #{item.Cost}
        br
-       button.btn( class="btn-primary ml-1", onclick= destination) Update
+       button.btn( class="btn-primary ml-1", onclick= destination1) Update
+       button.btn( class="btn-secondary", onclick= destination2) Delete
+       button.btn( class="btn-warning", onclick= destination3) View
   - let o;
   script.
     function buy(x){
